# gdax_rs

./: Cargo.toml
examples/: complex.rs  download_trade_history.rs  get_24hr_stats.rs  get_currencies.rs  get_product_order_book.rs  get_time.rs  get_trades.rs
src/: currencies.rs  lib.rs  rest_client.rs  time.rs
src/products/: get_24hr_stats.rs  get_historic_rates.rs  get_product_order_book.rs  get_product_ticker.rs  get_products.rs  get_trades.rs
