[package]
name = "gdax_rs"
version = "0.1.0"
authors = ["Tristan Marechaux <marechaux5@gmail.com>"]

[dependencies]
mockito = "0.9.0"
hyper = "0.11"
tokio-core = "0.1"
hyper-tls = "0.1.2"
futures = "0.1"
serde = "1.0.27"
serde_derive = "1.0"
serde_json = "1.0.9"
itertools = "0.7.4"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "1.0.0"
uuid = { version = "0.5.1", features = ["serde"] }
csv = "1.0.0-beta.5"

[csv.dependencies]
serde = "1"
serde_derive = "1"